MDEV-10725 Server 10.1.17 fails to build using clang with c++11

my_offsetof() returns a difference of two pointers, it must use the
appropriate return type (my_ptrdiff_t, not size_t)